feat: make structural diff optional - when switched off only content diff will be shown (#567)
Fixes #563

# Conflicts:
#	src/main/java/ch/sbb/polarion/extension/diff_tool/service/DiffService.java
#	src/test/java/ch/sbb/polarion/extension/diff_tool/rest/controller/DiffInternalControllerTest.java
#	src/test/java/ch/sbb/polarion/extension/diff_tool/rest/model/diff/DocumentsDiffParamsTest.java
#	src/test/java/ch/sbb/polarion/extension/diff_tool/service/DiffServiceTest.java
#	ui/src/components/documents/workitems/WorkItemsPairDiff.js
